add leaderboards and fix problems